--- a/期末/test.ipynb
+++ b/期末/test.ipynb
@@ -216,7 +216,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Tokyo 溫度 : 20.4 °C\n",
+      "Tokyo 溫度 : 21.5 °C\n",
       "溫度超過20度，開啟冷氣\n"
      ]
     }
@@ -289,6 +289,173 @@
     "latitude = 35.689381\n",
     "longitude = 139.69181\n",
     "\n",
+    "server()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data written successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#寫入google sheet\n",
+    "\n",
+    "import gspread\n",
+    "from oauth2client.service_account import ServiceAccountCredentials\n",
+    "\n",
+    "credentials_file = 'sincere-venture-419101-185a586d9858.json'\n",
+    "scope = ['https://spreadsheets.google.com/feeds', 'https://www.googleapis.com/auth/drive']\n",
+    "credentials = ServiceAccountCredentials.from_json_keyfile_name(credentials_file, scope)\n",
+    "client = gspread.authorize(credentials)\n",
+    "sheet = client.open(\"DSfinal\").sheet1\n",
+    "\n",
+    "sheet.update_cell(1, 1, \"Hello, Google Sheets!\")\n",
+    "\n",
+    "print(\"Data written successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "東京的经纬度坐标为：35.689381, 139.69181\n"
+     ]
+    }
+   ],
+   "source": [
+    "def read_coordinates_from_file(file_path):\n",
+    "    coordinates = {}\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        for line in file:\n",
+    "            parts = line.strip().split(',')\n",
+    "            place_name = parts[0]\n",
+    "            latitude, longitude = map(float, parts[1:])\n",
+    "            coordinates[place_name] = (latitude, longitude)\n",
+    "    return coordinates\n",
+    "\n",
+    "# 从文件中读取地点名称和经纬度信息\n",
+    "file_path = '經緯度參考.txt'\n",
+    "locations = read_coordinates_from_file(file_path)\n",
+    "\n",
+    "# 根据地点名称获取对应的经纬度坐标\n",
+    "def get_coordinates_by_location(location_name):\n",
+    "    if location_name in locations:\n",
+    "        return locations[location_name]\n",
+    "    else:\n",
+    "        print(\"地点名称无效！\")\n",
+    "        return None\n",
+    "\n",
+    "# 示例地点名称\n",
+    "location_name = \"東京\"\n",
+    "\n",
+    "# 获取地点的经纬度坐标\n",
+    "latitude, longitude = get_coordinates_by_location(location_name)\n",
+    "if latitude is not None and longitude is not None:\n",
+    "    print(f\"{location_name}的经纬度坐标为：{latitude}, {longitude}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tokyo 溫度 : 21.4 °C\n",
+      "溫度超過20度，開啟冷氣\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import time\n",
+    "\n",
+    "# 从文件中读取地点名称和经纬度信息\n",
+    "def read_coordinates_from_file(file_path):\n",
+    "    coordinates = {}\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        for line in file:\n",
+    "            parts = line.strip().split(',')\n",
+    "            place_name = parts[0]\n",
+    "            latitude, longitude = map(float, parts[1:])\n",
+    "            coordinates[place_name] = (latitude, longitude)\n",
+    "    return coordinates\n",
+    "\n",
+    "# 根据地点名称获取对应的经纬度坐标\n",
+    "def get_coordinates_by_location(location_name):\n",
+    "    if location_name in locations:\n",
+    "        return locations[location_name]\n",
+    "    else:\n",
+    "        print(\"地点名称无效！\")\n",
+    "        return None\n",
+    "\n",
+    "# 获取天气数据\n",
+    "def get_weather_by_coordinates(api_key, lat, lon):\n",
+    "    url = f\"https://api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&appid={api_key}\"\n",
+    "    response = requests.get(url)\n",
+    "    data = response.json()\n",
+    "    return data\n",
+    "\n",
+    "# 控制空调\n",
+    "def control_air_conditioner(temperature):\n",
+    "    try:\n",
+    "        if temperature is not None:\n",
+    "            weather_data = get_weather_by_coordinates(api_key, latitude, longitude)\n",
+    "            if temperature > 20:\n",
+    "                # 控制空调开启\n",
+    "                print(weather_data[\"name\"],\"溫度 :\", round(temperature,1), \"°C\")\n",
+    "                print(\"溫度超過20度，開啟冷氣\")\n",
+    "            else:\n",
+    "                # 控制空调关闭\n",
+    "                print(weather_data[\"name\"],\"溫度 :\", round(temperature,1), \"°C\")\n",
+    "                print(\"溫度低於20度，關閉冷氣\")\n",
+    "        else:\n",
+    "            print(\"无法获取温度信息\")\n",
+    "    except Exception as e:\n",
+    "        print(\"控制冷氣出錯：\", e)\n",
+    "\n",
+    "# 读取地点名称和经纬度信息\n",
+    "file_path = '經緯度參考.txt'\n",
+    "locations = read_coordinates_from_file(file_path)\n",
+    "\n",
+    "# 示例地点名称\n",
+    "location_name = \"東京\"\n",
+    "latitude, longitude = get_coordinates_by_location(location_name)\n",
+    "\n",
+    "# 替换为你的 API Key\n",
+    "api_key = \"b55132e7d0d008aa945b18e4cd2f5a02\"\n",
+    "\n",
+    "# 主循环\n",
+    "def server():\n",
+    "    while True:\n",
+    "        try:\n",
+    "            # 获取天气数据\n",
+    "            weather_data = get_weather_by_coordinates(api_key, latitude, longitude)\n",
+    "            if weather_data is not None:\n",
+    "                # 获取温度数据\n",
+    "                temperature_celsius = weather_data[\"main\"][\"temp\"] - 273.15\n",
+    "                # 控制空调\n",
+    "                control_air_conditioner(temperature_celsius)\n",
+    "        except Exception as e:\n",
+    "            print(\"Error:\", e)\n",
+    "        time.sleep(60)  # 每隔 60 秒监测一次温度\n",
+    "\n",
+    "# 运行主程序\n",
     "server()\n"
    ]
   }
