--- a/期末/weather.ipynb
+++ b/期末/weather.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,48 +87,46 @@
      "text": [
       "{\n",
       "    \"coord\": {\n",
-      "        \"lon\": 139.6917,\n",
-      "        \"lat\": 35.6895\n",
+      "        \"lon\": -74.006,\n",
+      "        \"lat\": 40.7128\n",
       "    },\n",
       "    \"weather\": [\n",
       "        {\n",
-      "            \"id\": 501,\n",
-      "            \"main\": \"Rain\",\n",
-      "            \"description\": \"moderate rain\",\n",
-      "            \"icon\": \"10n\"\n",
+      "            \"id\": 804,\n",
+      "            \"main\": \"Clouds\",\n",
+      "            \"description\": \"overcast clouds\",\n",
+      "            \"icon\": \"04n\"\n",
       "        }\n",
       "    ],\n",
       "    \"base\": \"stations\",\n",
       "    \"main\": {\n",
-      "        \"temp\": 293.78,\n",
-      "        \"feels_like\": 294.2,\n",
-      "        \"temp_min\": 291.85,\n",
-      "        \"temp_max\": 294.62,\n",
-      "        \"pressure\": 1003,\n",
-      "        \"humidity\": 88\n",
+      "        \"temp\": 291.44,\n",
+      "        \"feels_like\": 291.28,\n",
+      "        \"temp_min\": 286.88,\n",
+      "        \"temp_max\": 293.69,\n",
+      "        \"pressure\": 1006,\n",
+      "        \"humidity\": 75\n",
       "    },\n",
       "    \"visibility\": 10000,\n",
       "    \"wind\": {\n",
-      "        \"speed\": 7.2,\n",
-      "        \"deg\": 200\n",
-      "    },\n",
-      "    \"rain\": {\n",
-      "        \"1h\": 2.32\n",
+      "        \"speed\": 1.79,\n",
+      "        \"deg\": 152,\n",
+      "        \"gust\": 3.58\n",
       "    },\n",
       "    \"clouds\": {\n",
-      "        \"all\": 75\n",
+      "        \"all\": 100\n",
       "    },\n",
-      "    \"dt\": 1715080964,\n",
+      "    \"dt\": 1715151666,\n",
       "    \"sys\": {\n",
       "        \"type\": 2,\n",
-      "        \"id\": 268395,\n",
-      "        \"country\": \"JP\",\n",
-      "        \"sunrise\": 1715024592,\n",
-      "        \"sunset\": 1715074341\n",
+      "        \"id\": 2008101,\n",
+      "        \"country\": \"US\",\n",
+      "        \"sunrise\": 1715161541,\n",
+      "        \"sunset\": 1715212759\n",
       "    },\n",
-      "    \"timezone\": 32400,\n",
-      "    \"id\": 1850144,\n",
-      "    \"name\": \"Tokyo\",\n",
+      "    \"timezone\": -14400,\n",
+      "    \"id\": 5128581,\n",
+      "    \"name\": \"New York\",\n",
       "    \"cod\": 200\n",
       "}\n"
      ]
@@ -150,8 +148,8 @@
     "        return None\n",
     "\n",
     "api_key = \"b55132e7d0d008aa945b18e4cd2f5a02\"\n",
-    "latitude = 35.689381\n",
-    "longitude = 139.69181\n",
+    "latitude = 40.7127753\n",
+    "longitude = -74.0059728\n",
     "\n",
     "weather_data = get_weather_data(api_key, latitude, longitude)\n",
     "\n",
