--- a/期末/weather.ipynb
+++ b/期末/weather.ipynb
@@ -25,27 +25,26 @@
     "\n",
     "# 检查响应是否包含天气情况描述\n",
     "if \"weather\" in weather_data and len(weather_data[\"weather\"]) > 0:\n",
-    "    print(\"Weather condition:\", weather_data[\"weather\"][0][\"description\"])\n"
+    "    print(\"Weather condition:\", weather_data[\"weather\"][0][\"description\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weather: light rain\n",
-      "Temperature: 20.5 °C\n",
-      "Humidity: 87 %\n",
-      "City: Tokyo\n"
+      "Weather: scattered clouds\n",
+      "Temperature: 27.8 °C\n",
+      "Humidity: 31 %\n",
+      "City: Xianeibu\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "import requests\n",
     "\n",
     "def kelvin_to_celsius(kelvin):\n",
@@ -61,8 +60,8 @@
     "api_key = \"b55132e7d0d008aa945b18e4cd2f5a02\"\n",
     "\n",
     "# 替换为你希望获取天气数据的地点的经纬度坐标\n",
-    "latitude = 35.689381\n",
-    "longitude = 139.69181\n",
+    "latitude = 25.03746\n",
+    "longitude = 121.564558\n",
     "\n",
     "# 获取天气数据\n",
     "weather_data = get_weather_by_coordinates(api_key, latitude, longitude)\n",
@@ -73,12 +72,12 @@
     "print(\"Weather:\", weather_data[\"weather\"][0][\"description\"])\n",
     "print(\"Temperature:\", temperature_celsius, \"°C\")\n",
     "print(\"Humidity:\", weather_data[\"main\"][\"humidity\"], \"%\")\n",
-    "print(\"City:\",weather_data[\"name\"])\n"
+    "print(\"City:\",weather_data[\"name\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -87,46 +86,45 @@
      "text": [
       "{\n",
       "    \"coord\": {\n",
-      "        \"lon\": -74.006,\n",
-      "        \"lat\": 40.7128\n",
+      "        \"lon\": 120.6844,\n",
+      "        \"lat\": 24.144\n",
       "    },\n",
       "    \"weather\": [\n",
       "        {\n",
-      "            \"id\": 804,\n",
+      "            \"id\": 802,\n",
       "            \"main\": \"Clouds\",\n",
-      "            \"description\": \"overcast clouds\",\n",
-      "            \"icon\": \"04n\"\n",
+      "            \"description\": \"scattered clouds\",\n",
+      "            \"icon\": \"03d\"\n",
       "        }\n",
       "    ],\n",
       "    \"base\": \"stations\",\n",
       "    \"main\": {\n",
-      "        \"temp\": 291.44,\n",
-      "        \"feels_like\": 291.28,\n",
-      "        \"temp_min\": 286.88,\n",
-      "        \"temp_max\": 293.69,\n",
+      "        \"temp\": 301.46,\n",
+      "        \"feels_like\": 303.32,\n",
+      "        \"temp_min\": 298.73,\n",
+      "        \"temp_max\": 301.54,\n",
       "        \"pressure\": 1006,\n",
-      "        \"humidity\": 75\n",
+      "        \"humidity\": 62\n",
       "    },\n",
       "    \"visibility\": 10000,\n",
       "    \"wind\": {\n",
-      "        \"speed\": 1.79,\n",
-      "        \"deg\": 152,\n",
-      "        \"gust\": 3.58\n",
+      "        \"speed\": 4.63,\n",
+      "        \"deg\": 350\n",
       "    },\n",
       "    \"clouds\": {\n",
-      "        \"all\": 100\n",
+      "        \"all\": 40\n",
       "    },\n",
-      "    \"dt\": 1715151666,\n",
+      "    \"dt\": 1715330800,\n",
       "    \"sys\": {\n",
       "        \"type\": 2,\n",
-      "        \"id\": 2008101,\n",
-      "        \"country\": \"US\",\n",
-      "        \"sunrise\": 1715161541,\n",
-      "        \"sunset\": 1715212759\n",
+      "        \"id\": 86663,\n",
+      "        \"country\": \"TW\",\n",
+      "        \"sunrise\": 1715289422,\n",
+      "        \"sunset\": 1715337021\n",
       "    },\n",
-      "    \"timezone\": -14400,\n",
-      "    \"id\": 5128581,\n",
-      "    \"name\": \"New York\",\n",
+      "    \"timezone\": 28800,\n",
+      "    \"id\": 1668399,\n",
+      "    \"name\": \"Taichung\",\n",
       "    \"cod\": 200\n",
       "}\n"
      ]
@@ -135,8 +133,6 @@
    "source": [
     "import requests\n",
     "import json\n",
-    "\n",
-    "\n",
     "\n",
     "def get_weather_data(api_key, latitude, longitude):\n",
     "    url = f\"https://api.openweathermap.org/data/2.5/weather?lat={latitude}&lon={longitude}&appid={api_key}\"\n",
@@ -148,13 +144,13 @@
     "        return None\n",
     "\n",
     "api_key = \"b55132e7d0d008aa945b18e4cd2f5a02\"\n",
-    "latitude = 40.7127753\n",
-    "longitude = -74.0059728\n",
+    "latitude = 24.138504\n",
+    "longitude = 120.678434\n",
     "\n",
     "weather_data = get_weather_data(api_key, latitude, longitude)\n",
     "\n",
     "if weather_data:\n",
-    "    print(json.dumps(weather_data, indent=4))  # 打印原始的 JSON 数据\n"
+    "    print(json.dumps(weather_data, indent=4))  # 打印原始的 JSON 数据"
    ]
   }
  ],
