--- a/期末/weather.ipynb
+++ b/期末/weather.ipynb
@@ -30,16 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weather: scattered clouds\n",
-      "Temperature: 27.8 °C\n",
-      "Humidity: 31 %\n",
+      "Weather: broken clouds\n",
+      "Temperature: 22.0 °C\n",
+      "Humidity: 46 %\n",
       "City: Xianeibu\n"
      ]
     }
@@ -59,7 +59,6 @@
     "# 替换为你的 API Key\n",
     "api_key = \"b55132e7d0d008aa945b18e4cd2f5a02\"\n",
     "\n",
-    "# 替换为你希望获取天气数据的地点的经纬度坐标\n",
     "latitude = 25.03746\n",
     "longitude = 121.564558\n",
     "\n",
@@ -77,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,45 +85,45 @@
      "text": [
       "{\n",
       "    \"coord\": {\n",
-      "        \"lon\": 120.6844,\n",
-      "        \"lat\": 24.144\n",
+      "        \"lon\": 139.6918,\n",
+      "        \"lat\": 35.6894\n",
       "    },\n",
       "    \"weather\": [\n",
       "        {\n",
-      "            \"id\": 802,\n",
+      "            \"id\": 803,\n",
       "            \"main\": \"Clouds\",\n",
-      "            \"description\": \"scattered clouds\",\n",
-      "            \"icon\": \"03d\"\n",
+      "            \"description\": \"broken clouds\",\n",
+      "            \"icon\": \"04d\"\n",
       "        }\n",
       "    ],\n",
       "    \"base\": \"stations\",\n",
       "    \"main\": {\n",
-      "        \"temp\": 301.46,\n",
-      "        \"feels_like\": 303.32,\n",
-      "        \"temp_min\": 298.73,\n",
-      "        \"temp_max\": 301.54,\n",
-      "        \"pressure\": 1006,\n",
-      "        \"humidity\": 62\n",
+      "        \"temp\": 292.01,\n",
+      "        \"feels_like\": 291.26,\n",
+      "        \"temp_min\": 289.9,\n",
+      "        \"temp_max\": 294.05,\n",
+      "        \"pressure\": 1018,\n",
+      "        \"humidity\": 50\n",
       "    },\n",
       "    \"visibility\": 10000,\n",
       "    \"wind\": {\n",
-      "        \"speed\": 4.63,\n",
-      "        \"deg\": 350\n",
+      "        \"speed\": 6.69,\n",
+      "        \"deg\": 40\n",
       "    },\n",
       "    \"clouds\": {\n",
-      "        \"all\": 40\n",
+      "        \"all\": 75\n",
       "    },\n",
-      "    \"dt\": 1715330800,\n",
+      "    \"dt\": 1715650715,\n",
       "    \"sys\": {\n",
       "        \"type\": 2,\n",
-      "        \"id\": 86663,\n",
-      "        \"country\": \"TW\",\n",
-      "        \"sunrise\": 1715289422,\n",
-      "        \"sunset\": 1715337021\n",
+      "        \"id\": 268395,\n",
+      "        \"country\": \"JP\",\n",
+      "        \"sunrise\": 1715629026,\n",
+      "        \"sunset\": 1715679492\n",
       "    },\n",
-      "    \"timezone\": 28800,\n",
-      "    \"id\": 1668399,\n",
-      "    \"name\": \"Taichung\",\n",
+      "    \"timezone\": 32400,\n",
+      "    \"id\": 1850144,\n",
+      "    \"name\": \"Tokyo\",\n",
       "    \"cod\": 200\n",
       "}\n"
      ]
@@ -144,8 +143,8 @@
     "        return None\n",
     "\n",
     "api_key = \"b55132e7d0d008aa945b18e4cd2f5a02\"\n",
-    "latitude = 24.138504\n",
-    "longitude = 120.678434\n",
+    "latitude = 35.689381\n",
+    "longitude = 139.69181\n",
     "\n",
     "weather_data = get_weather_data(api_key, latitude, longitude)\n",
     "\n",
