--- a/期末/weather.ipynb
+++ b/期末/weather.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,9 +38,9 @@
      "output_type": "stream",
      "text": [
       "Weather: broken clouds\n",
-      "Temperature: 22.0 °C\n",
-      "Humidity: 46 %\n",
-      "City: Xianeibu\n"
+      "Temperature: 28.3 °C\n",
+      "Humidity: 78 %\n",
+      "City: Taoyuan City\n"
      ]
     }
    ],
@@ -59,8 +59,8 @@
     "# 替换为你的 API Key\n",
     "api_key = \"b55132e7d0d008aa945b18e4cd2f5a02\"\n",
     "\n",
-    "latitude = 25.03746\n",
-    "longitude = 121.564558\n",
+    "latitude = 24.9937\n",
+    "longitude = 121.2969\n",
     "\n",
     "# 获取天气数据\n",
     "weather_data = get_weather_by_coordinates(api_key, latitude, longitude)\n",
@@ -150,6 +150,35 @@
     "\n",
     "if weather_data:\n",
     "    print(json.dumps(weather_data, indent=4))  # 打印原始的 JSON 数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output directory: D:\\大學用\\資料結構\\期末\\results\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "# 确定新创建的目录路径\n",
+    "results_dir = r'D:\\大學用\\資料結構\\期末\\results'\n",
+    "\n",
+    "# 创建目录\n",
+    "os.makedirs(results_dir, exist_ok=True)\n",
+    "\n",
+    "# 设置 output_dir 为新创建的目录路径\n",
+    "output_dir = results_dir\n",
+    "\n",
+    "# 打印出新创建的目录路径，以便确认\n",
+    "print(f\"Output directory: {output_dir}\")\n"
    ]
   }
  ],
