--- a/期末/weather.ipynb
+++ b/期末/weather.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current temperature: 17.76 °C\n",
+      "Humidity: 56 %\n",
+      "Weather condition: overcast clouds\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "\n",
@@ -30,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weather: broken clouds\n",
-      "Temperature: 28.3 °C\n",
-      "Humidity: 78 %\n",
+      "Weather: light rain\n",
+      "Temperature: 24.6 °C\n",
+      "Humidity: 85 %\n",
       "City: Taoyuan City\n"
      ]
     }
@@ -198,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
