--- a/期末/test.ipynb
+++ b/期末/test.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "溫度： 21.03\n"
+     ]
+    }
+   ],
    "source": [
     "#獲得辦公室溫度\n",
     "\n",
@@ -14,21 +22,21 @@
     "\n",
     "# 請將你的授權令牌和 API 端點 URL 替換成你的真實值\n",
     "authorization_token = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiI4YWM0MDEzODIwNDU0MDE0ODdjNzIwZTc2ZDBmYzdjYSIsImlhdCI6MTY5ODgwNzExNSwiZXhwIjoyMDE0MTY3MTE1fQ.7KaCwPUcjAr_zne04qili2fwQO1QoWTPzsmV1v_LLIc\"\n",
-    "api_endpoint = \"http://211.21.113.190:8155/api/states/sensor.ban_gong_shi_wen_shi_du_temperature\"\n",
+    "api_endpoint_tem = \"http://211.21.113.190:8155/api/states/sensor.ban_gong_shi_wen_shi_du_temperature\"\n",
     "\n",
     "# 設置請求標頭\n",
     "headers = {\"Authorization\": \"Bearer \" + authorization_token}\n",
     "\n",
     "try:\n",
     "    # 發送 HTTP GET 請求\n",
-    "    response = requests.get(api_endpoint, headers=headers)\n",
+    "    response = requests.get(api_endpoint_tem, headers=headers)\n",
     "    \n",
     "    # 檢查響應狀態碼\n",
     "    if response.status_code == 200:\n",
     "        # 解析 JSON 響應並取得溫度值\n",
     "        data = response.json()\n",
     "        temperature = data[\"state\"]\n",
-    "        print(\"溫度值：\", temperature)\n",
+    "        print(\"溫度：\", temperature)\n",
     "    else:\n",
     "        print(\"請求失敗，狀態碼：\", response.status_code)\n",
     "\n",
@@ -38,9 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#若大於20開燈\n",
     "def turn_16_on():\n",
@@ -59,23 +75,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "濕度： 71.21\n"
+     ]
+    }
+   ],
    "source": [
     "#獲得辦公室濕度\n",
     "import requests\n",
     "\n",
     "# 請將你的授權令牌和 API 端點 URL 替換成你的真實值\n",
     "authorization_token = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiI4YWM0MDEzODIwNDU0MDE0ODdjNzIwZTc2ZDBmYzdjYSIsImlhdCI6MTY5ODgwNzExNSwiZXhwIjoyMDE0MTY3MTE1fQ.7KaCwPUcjAr_zne04qili2fwQO1QoWTPzsmV1v_LLIc\"\n",
-    "api_endpoint = \"http://211.21.113.190:8155/api/states/sensor.ban_gong_shi_wen_shi_du_humidity\"\n",
+    "                    \n",
+    "api_endpoint_hum = \"http://211.21.113.190:8155/api/states/sensor.ban_gong_shi_wen_shi_du_humidity\"\n",
     "\n",
     "# 設置請求標頭\n",
     "headers = {\"Authorization\": \"Bearer \" + authorization_token}\n",
     "\n",
     "try:\n",
     "    # 發送 HTTP GET 請求\n",
-    "    response = requests.get(api_endpoint, headers=headers)\n",
+    "    response = requests.get(api_endpoint_hum, headers=headers)\n",
     "    \n",
     "    # 檢查響應狀態碼\n",
     "    if response.status_code == 200:\n",
@@ -92,21 +124,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "溫度： 71.21\n",
+      "\n",
+      "溫度超過 25 度，開啟冷氣\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m無法執行程式碼，已處置工作階段。請嘗試重新啟動核心。"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m無法執行程式碼，已處置工作階段。請嘗試重新啟動核心。. \n",
+      "\u001b[1;31m如需詳細資料，請檢視 Jupyter <a href='command:jupyter.viewOutput'>記錄</a>。"
+     ]
+    }
+   ],
    "source": [
     "#獲得辦公室溫度後，每隔60秒做判斷開關燈\n",
     "import requests\n",
     "import time\n",
     "authorization_token = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiI4YWM0MDEzODIwNDU0MDE0ODdjNzIwZTc2ZDBmYzdjYSIsImlhdCI6MTY5ODgwNzExNSwiZXhwIjoyMDE0MTY3MTE1fQ.7KaCwPUcjAr_zne04qili2fwQO1QoWTPzsmV1v_LLIc\"\n",
-    "api_endpoint = \"http://211.21.113.190:8155/api/states/sensor.ban_gong_shi_wen_shi_du_temperature\"\n",
+    "api_endpoint_tem = \"http://211.21.113.190:8155/api/states/sensor.ban_gong_shi_wen_shi_du_temperature\"\n",
     "headers = {\"Authorization\": \"Bearer \" + authorization_token}\n",
     "def get_temperature():\n",
     "    # 從溫度感測器獲取溫度值的函式\n",
     "    try:\n",
     "        # 發送 HTTP GET 請求獲取溫度值\n",
-    "        response = requests.get(api_endpoint, headers=headers)\n",
+    "        response = requests.get(api_endpoint_tem, headers=headers)\n",
     "        \n",
     "        # 檢查響應狀態碼\n",
     "        if response.status_code == 200:\n",
@@ -728,6 +787,82 @@
     "    print(\"熱水器溫度：\", temperature, \"°C\")\n",
     "else:\n",
     "    print(\"無法獲取溫度數據\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "地點: Tokyo\n",
+      "溫度: 25.14 °C\n",
+      "濕度: 48 %\n",
+      "天氣: broken clouds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "def get_weather_by_coordinates(api_key, latitude, longitude):\n",
+    "    url = f\"https://api.openweathermap.org/data/2.5/weather?lat={latitude}&lon={longitude}&appid={api_key}&units=metric\"\n",
+    "    response = requests.get(url)\n",
+    "    response.raise_for_status()  # 如果请求失败，会抛出异常\n",
+    "    return response.json()\n",
+    "\n",
+    "def get_tem(api_key, latitude, longitude):\n",
+    "    try:\n",
+    "        weather_data = get_weather_by_coordinates(api_key, latitude, longitude)\n",
+    "        temperature = weather_data[\"main\"][\"temp\"]\n",
+    "        humidity = weather_data[\"main\"][\"humidity\"]\n",
+    "        weather_description = weather_data[\"weather\"][0][\"description\"]\n",
+    "\n",
+    "        print(f\"地點: {weather_data['name']}\")\n",
+    "        print(f\"溫度: {round(temperature, 2)} °C\")\n",
+    "        print(f\"濕度: {humidity} %\")\n",
+    "        print(f\"天氣: {weather_description}\")\n",
+    "\n",
+    "        return {\n",
+    "            \"temperature\": round(temperature, 2),\n",
+    "            \"humidity\": humidity,\n",
+    "            \"weather_description\": weather_description\n",
+    "        }\n",
+    "    except requests.exceptions.RequestException as e:\n",
+    "        print(\"API請求出錯：\", e)\n",
+    "        return None\n",
+    "    except KeyError as e:\n",
+    "        print(\"JSON解析出錯：\", e)\n",
+    "        return None\n",
+    "    except Exception as e:\n",
+    "        print(\"未知錯誤：\", e)\n",
+    "        return None\n",
+    "latitude = 35.6895  # 例如：台北市的緯度\n",
+    "longitude = 139.6917 # 例如：台北市的經度\n",
+    "weather_info = get_tem(api_key, latitude, longitude)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fefaefd 4.0 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "api_key = input(\"请输入您的API密钥: \")\n",
+    "latitude = float(input(\"请输入纬度: \"))\n",
+    "longitude = float(input(\"请输入经度: \"))\n",
+    "print(api_key,latitude,longitude)"
    ]
   }
  ],
