--- a/期末/weather.ipynb
+++ b/期末/weather.ipynb
@@ -180,6 +180,42 @@
     "# 打印出新创建的目录路径，以便确认\n",
     "print(f\"Output directory: {output_dir}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_coordinates_from_file(file_path):\n",
+    "    coordinates = {}\n",
+    "    with open(file_path, 'r', encoding='utf-8') as file:\n",
+    "        for line in file:\n",
+    "            parts = line.strip().split(',')\n",
+    "            place_name = parts[0]\n",
+    "            latitude, longitude = map(float, parts[1:])\n",
+    "            coordinates[place_name] = (latitude, longitude)\n",
+    "    return coordinates\n",
+    "\n",
+    "def weather():\n",
+    "    locations = read_coordinates_from_file('經緯度參考.txt')\n",
+    "    print(\"Locations dictionary:\", locations)  # 添加这行打印语句\n",
+    "    data = request.json\n",
+    "    location_name = data.get('location')  # 获取城市名\n",
+    "    if location_name in locations:\n",
+    "        latitude, longitude = locations[location_name]\n",
+    "        weather_data = get_weather_data(api_key, latitude, longitude)\n",
+    "        temperature = weather_data[\"main\"][\"temp\"]\n",
+    "        humidity = weather_data[\"main\"][\"humidity\"]\n",
+    "        weather_description = weather_data[\"weather\"][0][\"description\"]\n",
+    "        locweather_data = {\n",
+    "            'city': location_name,\n",
+    "            'weather_description': weather_description,\n",
+    "            'temperature': temperature,\n",
+    "            'humidity': humidity\n",
+    "        }\n",
+    "        return locweather_data\n"
+   ]
   }
  ],
  "metadata": {
